--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>GitHub</title>
 </head>
 <body>
-    <h2>Lokk Mama, I am using GitHub</h2>
+    <h2>Look Mama, I am using GitHub</h2>
+    <p>Let's Practise</p>
+    <img src="ProPic.jpg" alt="My Pic" width="40%">
     
 </body>
 </html>
