--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <h2>Look Mama, I am using GitHub</h2>
     <p>Let's Practise</p>
     <img src="ProPic.jpg" alt="My Pic" width="40%">
+    <br>
+    <h1>Typing from second branch</h1>
+    <p>This is my-second-branch</p>
+
     
 </body>
 </html>
