Adding more code

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h2>Look Mama, I am using GitHub</h2>
     <p>Let's Practise</p>
+    <p>Adding more Code from my-second-branch</p>
     <img src="ProPic.jpg" alt="My Pic" width="40%">
     <br>
     <h1>Typing from second branch</h1>
