Added another code

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <br>
     <h1>Typing from second branch</h1>
     <p>This is my-second-branch</p>
+    <h1>Branching Conflict</h1>
+    <p>Added another Code</p>
 
     
 </body>
