added another paragraph

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <br>
     <h1>Typing from second branch</h1>
     <p>This is my-second-branch</p>
+    <br>
+    <p>Added another paragraph</p>
+    <p>Branching Conflict</p>
+
 
     
 </body>
