--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub</title>
+    <title>Resolved GitHub</title>
 </head>
 <body>
     <h2>Look Mama, I am using GitHub</h2>
